[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmgridtools"
version = "0.1.0"
description = "A Python package for grid-based tools and utilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Maarten Kooyman", email = "maarten@oyat.nl"},
]
keywords = ["grid", "tools", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tqdm>=4.60.0",
    "requests>=2.25.0",
]

[project.scripts]
pm_stage_files = "pmgridtools.pm_stage_files:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
    "types-tqdm",
    "types-requests",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/maarten-k/pmgridtools"
Repository = "https://github.com/maarten-k/pmgridtools"
Documentation = "https://pmgridtools.readthedocs.io"
Issues = "https://github.com/maarten-k/pmgridtools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pmgridtools"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=pmgridtools --cov-report=html --cov-report=term-missing"
